--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <h1>{{title}}</h1>
+<!--<div><span>id:</span> {{ hero.id }}</div>
+<div><span>name:</span> {{ hero.name }}</div>-->
+<app-heroes></app-heroes>
