--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>{{title}}</h1>
 <!--<div><span>id:</span> {{ hero.id }}</div>
 <div><span>name:</span> {{ hero.name }}</div>-->
-<app-heroes></app-heroes>
+<!--<app-heroes></app-heroes>-->
+<nav>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
