--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div><span>name:</span> {{ hero.name }}</div>-->
 <!--<app-heroes></app-heroes>-->
 <nav>
+  <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
 </nav>
 <router-outlet></router-outlet>
